[package]
name = "hrstopwatch"
version = "0.0.3"
authors = ["Starz0r"]
edition = "2021"
license = "ISC"
readme = "README.md"
description = "A high accuracy stopwatch, intended for benchmarking."
documentation = "https://docs.rs/hrstopwatch/latest"
repository = "https://github.com/Starz0r/hrstopwatch"

[dependencies]
windows = { version = "0.39.0", features = [ "Win32_Foundation", "Win32_System_Performance" ] }